# continuum_robot

./: CMakeLists.txt  README.md  package.xml
include/continuum_robot/: Continuum.h
launch/: visulize.launch
msg/: sectionParameters.msg
src/: Continuum.cpp  basic_marker.cpp  core_node.cpp  create_cont_robot.cpp  interface.cpp
urdf/: continuum.rviz  robot_model.urdf  segment.urdf  xacro_segment.xacro
